src/app.css
:root {
    --background: #141414;
    --color: #fff;

    /* button */
    --button-background: #ffcc4d;
    --button-hover: #ffdb81;
    --button-text: #000;

    /* spinner */
    --spinner-a: #141414;
    --spinner-b: #ffcc4d;
}

@media (prefers-color-scheme: light) {
    :root {
        --background: #fff;
        --color: #000;
    }
}

html {
    font-family: Pretendard, -apple-system, system-ui, Roboto, sans-serif;
    font-size: 22px;
    font-weight: 400;
    color: var(--color);
    background-color: var(--background);
    word-break: keep-all;
}

*:focus {
    outline: none;
}

/* Firefox */
* {
    scrollbar-width: thin;
    scrollbar-color: #fff #000;
}

/* Chrome, Edge, and Safari */
*::-webkit-scrollbar {
    width: 7px;
}

*::-webkit-scrollbar-track {
    background: #000;
}

*::-webkit-scrollbar-thumb {
    background-color: #fff;
    border-radius: 0px;
    border: 0px solid #fff;
}

/* Heading */
h1,
h2,
h3,
h4,
h5,
h6 {
    font-weight: 600;
}

h1 {
    font-size: 60px;
}

h2 {
    font-size: 50px;
}

/* Layout */
.section {
    padding-top: 60px;
    padding-bottom: 60px;
}

.container {
    text-align: left;
    margin-left: 5%;
    margin-right: 5%;
}

@media (min-width: 700px) {
    .container {
        margin-left: 20%;
        margin-right: 20%;
    }
}

/* Breakpoint */
hr {
    margin-top: 60px;
    border: none;
}

/* For text button */
.clickable {
    cursor: pointer;
}

/* Input field */
.field {
    display: block;
    margin-top: 30px;
    margin-bottom: 30px;
}

label {
    display: block;
    font-size: 30px;
    margin-bottom: 5px;
}

input[type="email"],
input[type="text"],
input[type="password"] {
    display: block;
    width: 100%;
    font-size: 20px;
    background-color: var(--background);
    color: var(--color);

    padding: 10px;
    border: 1px solid var(--color);
    border-radius: 0.25rem;
}

input:focus {
    border-color: crimson;
}

/* Ordered Lists & Unordered Lists */
li,
li > ul {
    margin-left: 25px;
}

ul > li {
    margin-left: 0;
}

ul > li::before {
    content: "-";
    margin-right: 10px;
}

/* Table */
table {
    width: 100%;
    text-align: center;
    margin-top: 10px;
    display: block;
    overflow-x: auto;
}

@media (min-width: 700px) {
    table {
        display: table;
    }
}

thead {
    border-bottom: 1px solid var(--color);
}

th {
    font-size: 25px;
    font-weight: 600;
}

th,
td {
    padding: 10px;
}

th:not(:last-child),
td:not(:last-child) {
    border-right: 1px solid var(--color);
}

tbody > tr:hover {
    box-shadow: 0 0 1px var(--color);
}

/* Loading spinner */
.spinner {
    position: absolute;
    top: calc(50% - 60px);
    left: calc(50% - 60px);
    border: 16px solid var(--spinner-a);
    border-top-color: var(--spinner-b);
    border-radius: 50%;
    width: 120px;
    height: 120px;
    animation: spinner 0.8s linear infinite;
}

@keyframes spinner {
    from {
        transform: rotate(0turn);
    }

    to {
        transform: rotate(1turn);
    }
}

/* Link */
a {
    color: #0f72c8;
    text-decoration: underline 2px #0f72c8;
}

a:hover {
    text-decoration: none;
}

/* Button display */
.buttons {
    display: flex;
    flex-wrap: wrap;
}

.buttons > .button:not(:last-child) {
    margin-right: 3px;
}

.buttons > .button {
    margin-bottom: 3px;
}

/* Button */
.button {
    display: inline-block;
    text-decoration: none;
    cursor: pointer;

    color: var(--button-text);
    background-color: var(--button-background);

    font: inherit;
    font-size: 20px !important;

    padding: 10px;
    border: 1px solid var(--button-background);
    border-radius: 0.25rem;
}

.button:hover {
    background-color: var(--button-hover);
    border: 1px solid var(--button-hover);
}

/* Fullwidth button */
.button.max {
    width: 100%;
}

/* Button with spinner */
.button.spin {
    pointer-events: none;
    color: transparent !important;
}

.button.spin::after {
    content: "";
    position: absolute;
    width: 24px;
    height: 24px;
    left: 0;
    right: 0;
    margin: auto;
    border: 6px solid var(--spinner-a);
    border-top-color: var(--spinner-b);
    border-radius: 50%;
    animation: spinner 0.8s linear infinite;
}

/* Heading in todo content */
div.todo > div > h1,
div.todo > div > h2 {
    font-size: 24px;
}

/* Line breaking in todo content */
.todo-content > hr {
    margin-top: 10px;
    margin-bottom: 5px;
    border-bottom: 1px dashed var(--color);
}

